2008-11-27  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: (hildon_touch_selector_class_init):
	Minor doc. fixes.

2008-11-27  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-time-selector.c: (_custom_print_func), (_create_ampm_model)
	Updated the logical ids related to ampm format, as now it is required to
	show it correctly localized even on languages with no default abbreviations
	for am or pm
	(_check_am_pm_format): check correctly the 24h format gconf property

	Fixes: NB#93680 (HildonTimePicker need fully localized am/pm)

2008-11-27  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c: Documentation updates.

2008-11-27  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-marshalers.list: Add BOOLEAN:VOID.
	* src/hildon-caption.c: (hildon_caption_class_init):
	* src/hildon-color-button.c: (hildon_color_button_class_init):
	* src/hildon-find-toolbar.c: (hildon_find_toolbar_class_init):
	* src/hildon-touch-selector.c: (hildon_touch_selector_class_init):
	* src/hildon-volumebar.c: (hildon_volumebar_class_init):
	* src/hildon-weekday-picker.c: (hildon_weekday_picker_class_init):

	Remove deprecated GTK+ marshalers and replace them with the ones provided
	by GLib, for those available, add a marshaler for BOOLEAN:VOID, which
	is not available in GLib, and use it.

2008-11-27  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: (_default_print_func): Do not reuse
	the text from the previous column if there is no
	HildonTouchSelectorColumn::text-property set.

2008-11-27  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.h
	* src/hildon-button.c (hildon_button_set_property)
	(hildon_button_get_property, hildon_button_class_init)
	(hildon_button_set_style, hildon_button_get_style):
	New "style" property to change the visual appearance of the
	button.

	* src/hildon-picker-button.c (hildon_picker_button_new):
	Set the new "style" property to HILDON_BUTTON_STYLE_PICKER.
